[package]
name = "reaper"
version = "0.3.0"
description = "A simple Linux TUI for listing and killing listening ports"
repository = "https://github.com/aymenkrifa/reaper"
authors = ["aymenkrifa <aymenkrifa@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.2"
color-eyre = "0.6.3"
