[package]
name = "reaper"
version = "0.3.0"
description = "A simple Linux TUI for listing and killing listening ports"
repository = "https://github.com/aymenkrifa/reaper"
authors = ["aymenkrifa <aymenkrifa@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
# crossterm comes via ratatui's re-export (`ratatui::crossterm`) so the
# two crates can never drift onto different crossterm versions.
ratatui = "0.30.2"
color-eyre = "0.6.3"
libc = "0.2"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
